--- a/.github/workflows/deploy-lambdas.yml
+++ b/.github/workflows/deploy-lambdas.yml
@@ -15,7 +15,7 @@ jobs:
 
     env:
       FUNCTION_ENV: dev
-      REGIONS: us-east-1 eu-west-1 ap-south-1 us-west-2 ap-northeast-1
+      REGIONS: us-east-1 eu-west-1 ap-south-1 us-west-2 ap-southeast-1
 
     steps:
       - name: Checkout code
@@ -29,7 +29,7 @@ jobs:
       - name: Install dependencies
         run: |
           python -m pip install --upgrade pip
-          pip install -r requirements.txt -t package
+          pip install -r lambda-code/requirements.txt -t package
 
       - name: Zip Lambda package
         run: |
