--- a/.gitignore
+++ b/.gitignore
@@ -3,3 +3,64 @@
 *.tfstate.backup
 .terraform.lock.hcl
 terraform.tfvars
+
+
+
+# Python
+__pycache__/
+*.py[cod]
+*$py.class
+*.so
+.Python
+env/
+build/
+develop-eggs/
+dist/
+downloads/
+eggs/
+.eggs/
+lib/
+lib64/
+parts/
+sdist/
+var/
+wheels/
+*.egg-info/
+.installed.cfg
+*.egg
+
+# Virtual Environment
+venv/
+.venv/
+ENV/
+
+# IDE
+.idea/
+.vscode/
+*.swp
+*.swo
+.DS_Store
+
+# AWS
+.aws/
+*.pem
+*.key
+
+# Environment variables
+.env
+.env.local
+.env.*.local
+
+# Logs
+*.log
+logs/
+
+# Deployment
+deployment/
+lambda-deployment.zip
+*.zip
+
+# Local development
+.pytest_cache/
+.coverage
+htmlcov/
