--- a/.github/workflows/deploy-central-api.yml
+++ b/.github/workflows/deploy-central-api.yml
@@ -27,9 +27,9 @@ jobs:
       - name: Create deployment package
         run: |
            mkdir -p deployment
-           pip install -r requirements.txt -t deployment
-           cp -r app deployment/
-           cp lambda_handler.py deployment/
+           pip install -r api-backend/requirements.txt -t deployment
+           cp -r api-backend/app deployment/
+           cp api-backend/lambda_handler.py deployment/
            cd deployment
            zip -r ../deployment.zip .
 
