--- a/.github/workflows/deploy-central-api.yml
+++ b/.github/workflows/deploy-central-api.yml
@@ -34,9 +34,9 @@ jobs:
           WORKSPACE_DIR="$GITHUB_WORKSPACE"
           echo "Workspace directory: $WORKSPACE_DIR"
           ls -la $WORKSPACE_DIR
-          pip install -r requirements.txt -t $WORKSPACE_DIR/deployment
-          cp -r app $WORKSPACE_DIR/deployment/
-          cp lambda_handler.py $WORKSPACE_DIR/deployment/
+          pip install -r $WORKSPACE_DIR/api-backend/requirements.txt -t $WORKSPACE_DIR/deployment
+          cp -r $WORKSPACE_DIR/api-backend/app $WORKSPACE_DIR/deployment/
+          cp $WORKSPACE_DIR/api-backend/lambda_handler.py $WORKSPACE_DIR/deployment/
           cd $WORKSPACE_DIR/deployment
           zip -r $WORKSPACE_DIR/deployment.zip .
 
