--- a/.github/workflows/deploy-central-api.yml
+++ b/.github/workflows/deploy-central-api.yml
@@ -33,7 +33,7 @@ jobs:
           ls -la
           WORKSPACE_DIR="$GITHUB_WORKSPACE"
           echo "Workspace directory: $WORKSPACE_DIR"
-          ls -la $WORKSPACE_DIR
+          ls -la $WORKSPACE_DIR/api-backend/
           pip install -r $WORKSPACE_DIR/api-backend/requirements.txt -t $WORKSPACE_DIR/deployment
           cp -r $WORKSPACE_DIR/api-backend/app $WORKSPACE_DIR/deployment/
           cp $WORKSPACE_DIR/api-backend/lambda_handler.py $WORKSPACE_DIR/deployment/
