--- a/.github/workflows/deploy-central-api.yml
+++ b/.github/workflows/deploy-central-api.yml
@@ -18,8 +18,7 @@ jobs:
     steps:
       - name: Checkout code
         uses: actions/checkout@v4
-        with:
-            path: api-backend/
+        
 
       - name: Setup python
         uses: actions/setup-python@v5
@@ -27,30 +26,22 @@ jobs:
           python-version: '3.12'
 
       - name: Create deployment package
-        working-directory: api-backend
         run: |
           echo "Working directory: $(pwd)"
           ls -la
-          WORKSPACE_DIR="$GITHUB_WORKSPACE"
-          echo "Workspace directory: $WORKSPACE_DIR"
-          ls -la $WORKSPACE_DIR/api-backend/
-          pip install -r $WORKSPACE_DIR/api-backend/requirements.txt -t $WORKSPACE_DIR/deployment
-          cp -r $WORKSPACE_DIR/api-backend/app $WORKSPACE_DIR/deployment/
-          cp $WORKSPACE_DIR/api-backend/lambda_handler.py $WORKSPACE_DIR/deployment/
-          cd $WORKSPACE_DIR/deployment
-          zip -r $WORKSPACE_DIR/deployment.zip .
+        
 
 
-      - name: Login to AWS
-        uses: aws-actions/configure-aws-credentials@v2
-        with:
-          aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
-          aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
-          aws-region: us-east-1
+      # - name: Login to AWS
+      #   uses: aws-actions/configure-aws-credentials@v2
+      #   with:
+      #     aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
+      #     aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+      #     aws-region: us-east-1
           
-      - name: Deploy to fastapi lambda
-        run: |
-          aws lambda update-function-code \
-            --function-name ${{ secrets.LAMBDA_FUNCTION_NAME }} \
-            --zip-file fileb://deployment.zip
+      # - name: Deploy to fastapi lambda
+      #   run: |
+      #     aws lambda update-function-code \
+      #       --function-name ${{ secrets.LAMBDA_FUNCTION_NAME }} \
+      #       --zip-file fileb://deployment.zip
 
