--- a/.github/workflows/deploy-central-api.yml
+++ b/.github/workflows/deploy-central-api.yml
@@ -39,16 +39,16 @@ jobs:
           zip -r $WORKSPACE_DIR/deployment.zip .
         
 
-      # - name: Login to AWS
-      #   uses: aws-actions/configure-aws-credentials@v2
-      #   with:
-      #     aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
-      #     aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
-      #     aws-region: us-east-1
+      - name: Login to AWS
+        uses: aws-actions/configure-aws-credentials@v2
+        with:
+          aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
+          aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+          aws-region: us-east-1
           
-      # - name: Deploy to fastapi lambda
-      #   run: |
-      #     aws lambda update-function-code \
-      #       --function-name ${{ secrets.LAMBDA_FUNCTION_NAME }} \
-      #       --zip-file fileb://deployment.zip
+      - name: Deploy to fastapi lambda
+        run: |
+          aws lambda update-function-code \
+            --function-name ${{ secrets.LAMBDA_FUNCTION_NAME }} \
+            --zip-file fileb://deployment.zip
 
