adding workflow file for cognito lambda

--- a/.github/workflows/deploy-cognito-code.yml
+++ b/.github/workflows/deploy-cognito-code.yml
@@ -24,6 +24,6 @@ jobs:
 
       - name: Package lambda code for deployment
         run: |
-           echo "Print current directory"
+           echo "Print current directory: $(pwd)"
            ls -la
-           
+
