--- a/.github/workflows/deploy-lambdas.yml
+++ b/.github/workflows/deploy-lambdas.yml
@@ -15,7 +15,7 @@ jobs:
 
     env:
       FUNCTION_ENV: dev
-      REGIONS: ap-south-1 us-east-1 ap-south-east-1 eu-west-1 sa-east-1
+      REGIONS: ap-south-1 
 
     steps:
       - name: Checkout code
@@ -29,7 +29,7 @@ jobs:
       - name: Install dependencies
         run: |
           python -m pip install --upgrade pip
-          pip install -r lambda-code/requirements.txt -t package
+          pip install -r lambda-code/monitoring-lambda-code/requirements.txt -t package
 
       - name: Zip Lambda package for deploying to lambda
         run: |
